[gd_scene load_steps=21 format=3 uid="uid://djqyc10nosdl"]

[ext_resource type="Script" uid="uid://fue81u7lotyd" path="res://Escenas/UI/Batalla/New BattleSystem/Scripts/ui/BattleUI_Refactor.gd" id="1_cwigb"]
[ext_resource type="Script" uid="uid://ciwn5vywclehe" path="res://Escenas/UI/Batalla/New BattleSystem/Scripts/ui/BattleMessageController_Refactor.gd" id="2_gtgo1"]
[ext_resource type="PackedScene" uid="uid://ui53do2ck5tn" path="res://Escenas/UI/Batalla/New BattleSystem/Escenas/FieldUI.tscn" id="2_yxxch"]
[ext_resource type="PackedScene" uid="uid://dkjekvml5fqpp" path="res://Escenas/UI/Menus/2 - Party/PARTY.tscn" id="3_kpt17"]
[ext_resource type="PackedScene" uid="uid://btj5i08qahepp" path="res://Escenas/UI/Batalla/New BattleSystem/Escenas/ActionMenu.tscn" id="4_hkwg8"]
[ext_resource type="PackedScene" uid="uid://brvsn2vfev6ng" path="res://Escenas/UI/Textbox/MessageBox.tscn" id="5_alpup"]
[ext_resource type="PackedScene" uid="uid://dauokklht8873" path="res://Escenas/UI/Batalla/New BattleSystem/Escenas/MoveMenu.tscn" id="6_x8cud"]
[ext_resource type="PackedScene" uid="uid://du3d20hvxfop2" path="res://Escenas/UI/Textbox/Choices/ChoicesContainer.tscn" id="7_fhvc7"]
[ext_resource type="AnimationLibrary" uid="uid://d0lwk37ojtsv7" path="res://Objetos/Batalla/Animaciones/Moves/Battle_AilmentAnimations.res" id="8_gtgo1"]
[ext_resource type="AnimationLibrary" uid="uid://cekbiwhukoatl" path="res://Objetos/Batalla/Animaciones/Moves/Battle_GeneralAnimations.res" id="9_0scdk"]
[ext_resource type="AnimationLibrary" uid="uid://2mrp3w2yg84c" path="res://Objetos/Batalla/Animaciones/Moves/Battle_MovesAnimations.res" id="10_vb384"]
[ext_resource type="AnimationLibrary" uid="uid://casxsbdqp031y" path="res://Objetos/Batalla/Animaciones/Moves/Battle_PokemonAnimations.res" id="11_sbxtu"]
[ext_resource type="AnimationLibrary" uid="uid://cao4my3byeek6" path="res://Objetos/Batalla/Animaciones/Moves/Battle_WeatherAnimations.res" id="12_6ri10"]
[ext_resource type="AnimationLibrary" uid="uid://6y11gonugprj" path="res://Objetos/Batalla/Animaciones/Moves/GLOBAL.res" id="13_a1pjc"]
[ext_resource type="Script" uid="uid://crlx36oubvj5k" path="res://Scripts/Batalla/Classes/BattleAnimationController.gd" id="14_66h0a"]
[ext_resource type="PackedScene" uid="uid://bboi1elun0mpv" path="res://Objetos/Batalla/Animaciones/Resources/Animation Frames.tscn" id="15_pv36b"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8fm4l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wab0d"]
texture = SubResource("CanvasTexture_8fm4l")
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_wk4cv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("back:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ltpu"]
_data = {
&"RESET": SubResource("Animation_wk4cv")
}

[node name="BattleUI" type="Control"]
custom_minimum_size = Vector2(512, 384)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cwigb")

[node name="MessageController" type="Node" parent="."]
script = ExtResource("2_gtgo1")

[node name="FieldUI" parent="." instance=ExtResource("2_yxxch")]
layout_mode = 1

[node name="PartyUI" parent="." instance=ExtResource("3_kpt17")]
visible = false
layout_mode = 0

[node name="ActionsMenu" parent="." instance=ExtResource("4_hkwg8")]
visible = false
layout_mode = 1

[node name="MessageBox" parent="." instance=ExtResource("5_alpup")]
visible = false
z_index = 6
layout_mode = 1

[node name="MovesMenu" parent="." instance=ExtResource("6_x8cud")]
visible = false
layout_mode = 1

[node name="ChoicesContainer" parent="." instance=ExtResource("7_fhvc7")]
visible = false
z_index = 6
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -28.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="back" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = 288.0
offset_right = 512.0
offset_bottom = 384.0
theme_override_styles/panel = SubResource("StyleBoxTexture_wab0d")

[node name="AnimationController" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0ltpu"),
&"Battle_AilmentAnimations": ExtResource("8_gtgo1"),
&"Battle_GeneralAnimations": ExtResource("9_0scdk"),
&"Battle_MovesAnimations": ExtResource("10_vb384"),
&"Battle_PokemonAnimations": ExtResource("11_sbxtu"),
&"Battle_WeatherAnimations": ExtResource("12_6ri10"),
&"GLOBAL": ExtResource("13_a1pjc")
}
script = ExtResource("14_66h0a")

[node name="AnimationFrames" parent="AnimationController" instance=ExtResource("15_pv36b")]
visible = false
